--- a/sip_pdb/templates/registrant/isi_data.jinja
+++ b/sip_pdb/templates/registrant/isi_data.jinja
@@ -58,6 +58,26 @@
 
 <div class="row">
 <div class="col">
+&nbsp;
+</div>
+</div>
+
+<div class="row justify-content-start">
+    <div class="col">
+        <div class="card border-primary">
+        <div class="card-header">
+            Unggah Sertifikat Prestasi dan Sertifikasi Hafalan
+        </div>
+        <div class="card-body">
+            <p>Silahkan mengupload sertfikat Prestasi dan sertfikat Hafalan dengan mengklik tombol dibawah.</p>
+            <a href="{{url_for('registrant.upload_dokumen')}}" class="btn btn-primary">Upload Sertfikat</a>
+        </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+<div class="col">
 <hr>
 </div>
 </div>
