download kartu, belum surat pernyataan

--- a/sip_pdb/templates/registrant/isi_data.jinja
+++ b/sip_pdb/templates/registrant/isi_data.jinja
@@ -66,11 +66,12 @@
     <div class="col">
         <div class="card border-primary">
         <div class="card-header">
-            Unggah Sertifikat Prestasi dan Sertifikasi Hafalan
+            Unggah Sertifikat Prestasi/Hafalan dan Surat Keterangan
         </div>
         <div class="card-body">
-            <p>Silahkan mengupload sertfikat Prestasi dan sertfikat Hafalan dengan mengklik tombol dibawah.</p>
-            <a href="{{url_for('registrant.upload_dokumen')}}" class="btn btn-primary">Upload Sertfikat</a>
+            <p>Silahkan mengupload dokumen yang dibutuhkan dengan mengklik tombol dibawah.</p>
+            <a href="{{url_for('registrant.upload_dokumen')}}" class="btn btn-primary">Upload Dokumen</a>
+            <a href="{{url_for('registrant.upload_dokumen')}}" class="btn btn-warning">Edit Profil</a>
         </div>
         </div>
     </div>
