--- a/sip_pdb/templates/registrant/beranda.jinja
+++ b/sip_pdb/templates/registrant/beranda.jinja
@@ -42,7 +42,7 @@
         Tes PPDB akan dilaksanakan pada tanggal 11 Februari 2024<br/>
         Silahkan Unduh dan cetak formulir dan kartu pendaftaran.
     </p>        
-    <a class="btn btn-primary" href="">
+    <a class="btn btn-primary" hx-boost="false" target="_blank" href="{{url_for('registrant.download_kartu_pendaftaran')}}">
         Unduh Kartu Dan Formulir Pendaftaran</a>
     {% elif reg_fee == 0 %}
     <h1>Selamat Datang di Sistem PPDB SMKIT Ihsanul Fikri Mungkid</h1>
