--- a/sip_pdb/templates/registrant/isi_data.jinja
+++ b/sip_pdb/templates/registrant/isi_data.jinja
@@ -71,7 +71,7 @@
         <div class="card-body">
             <p>Silahkan mengupload dokumen yang dibutuhkan dengan mengklik tombol dibawah.</p>
             <a href="{{url_for('registrant.upload_dokumen')}}" class="btn btn-primary">Upload Dokumen</a>
-            <a href="{{url_for('registrant.upload_dokumen')}}" class="btn btn-warning">Edit Profil</a>
+            <a href="{{url_for('registrant.edit_profil')}}" class="btn btn-warning">Edit Profil</a>
         </div>
         </div>
     </div>
