--- a/sip_pdb/templates/registrant/beranda.jinja
+++ b/sip_pdb/templates/registrant/beranda.jinja
@@ -20,7 +20,7 @@
 <p>Ini Beranda</p>
 
 <div class="row">
-<div class="<col>">
+<div class="col">
 <div > <!-- jumbotron sudah gak ada? -->
     {% if rg.verified_status < 0 %}
     <h1>Mohon maaf</h1>
