--- a/sip_pdb/templates/login/layout.jinja
+++ b/sip_pdb/templates/login/layout.jinja
@@ -56,7 +56,7 @@
           <a class="nav-link" href="#">Petunjuk</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Admin</a>
+          <a class="nav-link" href="{{ url_for('auth.login_admin') }}">Admin</a>
         </li>
       </ul>
     </div>
