--- a/sip_pdb/templates/registrant/rekap.jinja
+++ b/sip_pdb/templates/registrant/rekap.jinja
@@ -217,7 +217,7 @@
         <p>Jika ternyata masih terdapat kesalahan data setelah finalisasi, silahkan hubungi panitia.</p>
         {% elif rgd and pd.Ayah and pd.Ibu and pu  %}
         <a href="{{ url_for('registrant.finalisasi')}}" class="btn btn-warning text-decoration-none" role="button">
-            Finalisasiand pu 
+            Finalisasi
         </a>
         {% endif %}
     </div>
