--- a/sip_pdb/templates/registrant/isi_data.jinja
+++ b/sip_pdb/templates/registrant/isi_data.jinja
@@ -66,7 +66,7 @@
     <div class="col">
         <div class="card border-primary">
         <div class="card-header">
-            Unggah Sertifikat Prestasi/Hafalan dan Surat Keterangan
+            Unggah Sertifikat Prestasi/Hafalan dan Surat Keterangan <strong>(bila perlu)</strong>
         </div>
         <div class="card-body">
             <p>Silahkan mengupload dokumen yang dibutuhkan dengan mengklik tombol dibawah.</p>
