tambah verifikasi pembayaran

--- a/sip_pdb/templates/admin/layout.jinja
+++ b/sip_pdb/templates/admin/layout.jinja
@@ -97,7 +97,7 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"
-                            hx-get="{{ url_for('admin.beranda') }}"
+                            hx-get="{{ url_for('admin.lihat_pembayaran') }}"
                           >
                             <span class="ml-2">Lihat Pembayaran</span>
                           </a>
