--- a/sip_pdb/templates/admin/layout.jinja
+++ b/sip_pdb/templates/admin/layout.jinja
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/datatables.min.js') }}"></script>
 </head>
 {# hx-boost di nonaktifkan untuk mengejar kesimpel-an di panel admin #}
-<body hx-boost="false" hx-push-url="true">
+<body hx-boost="true" hx-push-url="true">
 
 <nav class="navbar navbar-dark bg-dark p-3">
         <div class="d-flex col-12 col-md-3 col-lg-2 mb-2 mb-lg-0 flex-wrap flex-md-nowrap justify-content-between">
