tambah js untuk edit password

--- a/sip_pdb/templates/registrant/ganti_password.jinja
+++ b/sip_pdb/templates/registrant/ganti_password.jinja
@@ -28,11 +28,11 @@
     </div>
     <div class="mb-3">
         <label class="form-label" for="new_password">Password Baru</label>
-        <input type="password" class="form-control" id="new_password" name="new_password" required>
+        <input type="password" onkeyup="cek_password()" class="form-control" id="new_password" name="new_password" required>
     </div>
     <div class="mb-3">
-        <label class="form-label" for="retype_password">Konfirmasi Password</label>
-        <input type="password" class="form-control" id="retype_password" name="confirm_password" required>
+        <label class="form-label" for="confirm_password">Konfirmasi Password</label>
+        <input type="password" onkeyup="cek_password()" class="form-control" id="confirm_password" name="confirm_password" required>
         <div id="password_help" class="form-text"></div>
     </div>
     <div class="mb-3">
@@ -41,4 +41,15 @@
 </form>
 </div>
 </div>
+<script>
+let cek_password = () => {
+    if(document.getElementById("new_password").value != document.getElementById("confirm_password").value){
+        document.getElementById("password_help").innerText = "Password tidak sama";
+        document.getElementById("bt_submit").disabled = true;
+    }else{
+        document.getElementById("password_help").innerText = "Password sudah sama";
+        document.getElementById("bt_submit").disabled = false;
+    }
+};
+</script>
 {% endblock %}
