ganti password admin

--- a/sip_pdb/templates/admin/layout.jinja
+++ b/sip_pdb/templates/admin/layout.jinja
@@ -67,7 +67,10 @@
                   ADMINISTRATOR: {{ admin_name }}
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <li><a class="dropdown-item" href="#">Ganti Password</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('admin.ganti_password') }}" 
+                  hx-target="#hx_content" 
+                  hx-swap="innerHTML"
+                  >Ganti Password</a></li>
                   <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a></li>
                 </ul>
               </div>
