--- a/sip_pdb/templates/registrant/beranda.jinja
+++ b/sip_pdb/templates/registrant/beranda.jinja
@@ -41,7 +41,9 @@
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <div class="mb-3">
                     <label class="form-label">Jumlah Pembayaran</label>
-                    <input type="number" required name="jumlah" class="form-control">
+                    {# Di skenario error, form-nya di deklarasikan sebagai form 2! #}
+                    <input type="number" onkeyup="format_idr_beranda2()" id="jumlah2" required name="jumlah" class="form-control">
+                    <div id="jumlah_help2" class="form-text"></div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Tanggal Pembayaran</label>
@@ -53,6 +55,13 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+            <script type="text/javascript">
+                var format_idr_beranda2 = () => {
+                    let jumlah_bayar = parseInt(document.getElementById('jumlah2').value);
+                    let formatted = 'Nilainya: Rp. ' + jumlah_bayar.toLocaleString('id-ID') + ',-';
+                    document.getElementById('jumlah_help2').innerText = formatted;
+                };
+            </script>
         </div>
         <div class="card-footer">
         &nbsp;
@@ -114,7 +123,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
             <script>
-                let format_idr_beranda = () => {
+                var format_idr_beranda = () => {
                     let jumlah_bayar = parseInt(document.getElementById('jumlah').value);
                     let formatted = 'Nilainya: Rp. ' + jumlah_bayar.toLocaleString('id-ID') + ',-';
                     document.getElementById('jumlah_help').innerText = formatted;
