--- a/sip_pdb/templates/admin/layout.jinja
+++ b/sip_pdb/templates/admin/layout.jinja
@@ -43,6 +43,9 @@
         .sidebar .nav-link.active {
             color: #0d6efd;
         }
+        body.dimmed {  
+          opacity: 0.5;
+        }
     </style>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
@@ -118,6 +121,12 @@
         </div>
     </div>
     <script type="text/javascript">
+    document.addEventListener('htmx:beforeRequest', function(event) {
+      document.body.classList.add('dimmed');
+    });
+    document.addEventListener('htmx:afterRequest', function(event) {
+      document.body.classList.remove('dimmed');
+    });
     const sbToggler = document.getElementById('sb-toggler');
     const sidebar = document.getElementById('sidebar');
     sbToggler.addEventListener('click', () => {
