--- a/sip_pdb/templates/login/layout.jinja
+++ b/sip_pdb/templates/login/layout.jinja
@@ -7,11 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <style type="text/css">
+    
+        html {
+            min-height: 100%; /* Look, it's not fixed anymore! */
+            display: flex;
+            flex-direction: column;
+        }
         body {
-            padding-top: 75px;
+            padding-top: 85px;
+            background-image: linear-gradient(to right top, #000000, #432122, #80412c, #b16e26, #cca814);
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            max-height: 100%;
+            flex-grow: 1;
         }
         body.dimmed {  
-          opacity: 0.5;
+          filter: blur(3px);
+        }
+        .logo {
+          max-width: 100%;
         }
     </style>
     {%if datatables %}
