--- a/sip_pdb/templates/login/lihat.jinja
+++ b/sip_pdb/templates/login/lihat.jinja
@@ -4,7 +4,10 @@
 
 {% block content %}
 <div class="row">
-	<div class="col">
+	<div class="col d-flex justify-content-center align-items-center ">
+		<div class="card rounded-0 mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Daftar Calon Peserta Ddidk</h5>
 		<table id="tabel_utama" class="table table-striped" style="width:100%">
             <thead>
                 <tr>
@@ -17,6 +20,8 @@
             <tbody>
             </tbody>
         </table>
+        </div>
+        </div>
 	</div>
 </div>
 <script>
