--- a/sip_pdb/templates/login/register.jinja
+++ b/sip_pdb/templates/login/register.jinja
@@ -3,47 +3,51 @@
 {% block title %}Daftar{% endblock %}
 
 {% block content %}
-<!-- TODO: Error Field -->
 <div class="row">
-	<div class="col">
-		<form method="POST" action="{{ url_for('auth.register')}}" hx-boost="false">
-		{{ form.csrf_token }}
-        {{ render_field(form.username) }}
-        {{ render_field(form.name) }}
-        {{ render_field(form.prev_school) }}
-        {{ render_field(form.nisn) }}
-        {{ render_field(form.cp) }}
-        <div class="mb-3">
-            <label class="form-label">Jenis Kelamin</label>
-            {% for subfield in form.gender %}
-                <div class="form-check">
-                    {{ subfield }}
-                    <label class="form-check-label" for="{{ subfield.id }}">{{ subfield.label }}</label>
+	<div class="col d-flex justify-content-center align-items-center ">
+		<div class="card rounded-0 mb-3" style="max-width: 680px;">
+            <div class="card-body">
+                <h5 class="card-title">Registrasi Calon Peserta Ddidk</h5>
+                <form method="POST" action="{{ url_for('auth.register')}}" hx-boost="false">
+                {{ form.csrf_token }}
+                {{ render_field(form.username) }}
+                {{ render_field(form.name) }}
+                {{ render_field(form.prev_school) }}
+                {{ render_field(form.nisn) }}
+                {{ render_field(form.cp) }}
+                <div class="mb-3">
+                    <label class="form-label">Jenis Kelamin</label>
+                    {% for subfield in form.gender %}
+                        <div class="form-check">
+                            {{ subfield }}
+                            <label class="form-check-label" for="{{ subfield.id }}">{{ subfield.label }}</label>
+                        </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
+                <div class="mb-3">
+                    <label class="form-label">Jalur Seleksi Pendaftaran</label>
+                    {{ form.selection_path(class="form-select") }}
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Program Pendidikan</label>
+                    {{ form.program(class="form-select") }}
+                </div>
+                {{ render_field(form.password) }}
+                {{ render_field(form.confirm_password) }}
+                {% if not disable_captcha %}
+                <div class="mb-3">
+                <label class="form-label">Gambar Captcha: </label>
+                <img src="{{ cap_img }}" id="capt_img" class="img-responsive" alt="captcha">
+                </div>
+                <div class="mb-3">
+                <label class="form-label">Input Captcha</label>
+                {{ form.captcha(class="form-control") }}
+                </div>
+                {% endif %}
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
-        <div class="mb-3">
-            <label class="form-label">Jalur Seleksi Pendaftaran</label>
-            {{ form.selection_path(class="form-select") }}
         </div>
-        <div class="mb-3">
-            <label class="form-label">Program Pendidikan</label>
-            {{ form.program(class="form-select") }}
-        </div>
-        {{ render_field(form.password) }}
-        {{ render_field(form.confirm_password) }}
-        {% if not disable_captcha %}
-        <div class="mb-3">
-        <label class="form-label">Gambar Captcha: </label>
-        <img src="{{ cap_img }}" id="capt_img" class="img-responsive" alt="captcha">
-        </div>
-        <div class="mb-3">
-        <label class="form-label">Input Captcha</label>
-        {{ form.captcha(class="form-control") }}
-        </div>
-        {% endif %}
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    </div>
+	</div>
 </div>
 {% endblock %}
