--- a/sip_pdb/templates/admin/layout.jinja
+++ b/sip_pdb/templates/admin/layout.jinja
@@ -44,7 +44,7 @@
             color: #0d6efd;
         }
         body.dimmed {  
-          opacity: 0.5;
+          filter: blur(3px);
         }
     </style>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
