--- a/sip_pdb/templates/registrant/layout.jinja
+++ b/sip_pdb/templates/registrant/layout.jinja
@@ -43,7 +43,7 @@
             color: #0d6efd;
         }
         body.dimmed {  
-          opacity: 0.5;
+          filter: blur(3px);
         }
     </style>
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}"></script>
